# blackberry-jam

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
prisma/: schema.prisma
src/: main.rs
src/graphql/: schema.rs  types.rs
src/graphql/mutation/: banned.rs  message.rs  mod.rs  report.rs  user.rs
src/graphql/query/: banned.rs  message.rs  mod.rs  report.rs  user.rs
